<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context="appewtc.masterung.easytour.RegisterActivity"
    android:background="@drawable/bg25">

    <LinearLayout
        android:orientation="vertical"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:padding="20dp"
        android:layout_marginTop="50dp"
        android:background="#82ffffff">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/authen"
            android:id="@+id/textView4"
            android:layout_gravity="center_horizontal"
            android:textSize="@dimen/h1" />

        <LinearLayout
            android:orientation="horizontal"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="50dp">

            <TextView
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:text="@string/user"
                android:id="@+id/textView5"
                android:textSize="@dimen/h2"
                android:layout_weight="1" />

            <EditText
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:id="@+id/editText3"
                android:layout_weight="2"
                android:inputType="text" />
        </LinearLayout>

        <LinearLayout
            android:orientation="horizontal"
            android:layout_width="match_parent"
            android:layout_height="wrap_content" >

            <TextView
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:text="@string/pass"
                android:id="@+id/textView6"
                android:textSize="@dimen/h2"
                android:layout_weight="1" />

            <EditText
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:id="@+id/editText4"
                android:layout_weight="2"
                android:inputType="text" />
        </LinearLayout>

        <LinearLayout
            android:orientation="horizontal"
            android:layout_width="match_parent"
            android:layout_height="wrap_content" >

            <TextView
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:text="@string/name"
                android:id="@+id/textView7"
                android:textSize="@dimen/h2"
                android:layout_weight="1" />

            <EditText
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:id="@+id/editText5"
                android:layout_weight="2"
                android:inputType="text" />
        </LinearLayout>

        <RadioGroup
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:layout_marginTop="30dp"
            android:id="@+id/ragPosition">

            <RadioButton
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:text="@string/tour"
                android:id="@+id/radioButton"
                android:layout_weight="1"
                android:checked="true" />

            <RadioButton
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:text="@string/admin"
                android:id="@+id/radioButton2"
                android:layout_weight="1" />
        </RadioGroup>
    </LinearLayout>

    <Button
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="Register"
        android:id="@+id/button8"
        android:layout_alignParentBottom="true"
        android:singleLine="true" />
</RelativeLayout>
